--- a/miao/noi.html
+++ b/miao/noi.html
@@ -32,7 +32,7 @@
 <script id="ch0103/06">
   var a = prompt("how many")
   var b = prompt("diediedie")
-  var c = b / a * 100
+  var c = (b / a * 100).toFixed(3)
   console.log(c + '%')
 </script>
 <script id="ch0103/07">
@@ -52,28 +52,28 @@
 <script id="ch0103/09">
   var r = prompt("半径")
   var pi = 3.14159
-  var d = (2 * r)
-  var round = (2 * pi * r)
-  var s = (pi * r * r)
+  var d = (2 * r).toFixed(4)
+  var round = (2 * pi * r).toFixed(4)
+  var s = (pi * r * r).toFixed(4)
   console.log(d,round,s)
 </script>
 <script id="ch0103/10">
   var r1 = prompt("r1")
   var r2 = prompt("r2")
-  var R = (1/((1/r1) + (1/r2)))
+  var R = (1/((1/r1) + (1/r2))).toFixed(2)
   console.log(R)
 </script>
 <script id="ch0103/11">
   var a = prompt("a")
   var b = prompt("b")
-  var k = Math.floor(a / b)
-  var y = (a / b - k)
+  var k = (a / b | 0)
+  var y = (a - b * k).toFixed(4)
   console.log(y)
 </script>
 <script id="ch0103/12">
   var r = prompt("r")
   var pi = 3.14
-  var V = (4 / 3 * pi * Math.pow(r,3))
+  var V = (4 / 3 * pi * Math.pow(r,3)).toFixed(2)
   console.log(V)
 </script>
 <script id="ch0103/13">
@@ -102,7 +102,7 @@
    var x1 = prompt("x1") , x2 = prompt("x2")
    var y1 = prompt("y1") , y2 = prompt("y2")
    var a = Math.sqrt((Math.pow(x1 - y1 , 2)) + (Math.pow(x2 - y2 , 2)))
-   console.log(a)
+   console.log(a.toFixed(3))
 </script>
 <script id="ch0103/17">
   var x1 = prompt("x1") , y1 = prompt("y1")
@@ -113,7 +113,7 @@
   var a3 = Math.sqrt((Math.pow(x1 - x2 , 2)) + (Math.pow(y1 - y2 , 2)))
   var p = (a1 + a2 + a3) / 2
   var S = Math.sqrt(p * ( p - a1) * Math.abs( p - a2) * ( p - a3))
-  console.log(S)
+  console.log(S.toFixed(2))
 </script>
 <script id="ch0103/18">
   var a1 = prompt("a1")
@@ -187,10 +187,10 @@
 <script id="ch0104/07">
   var x = prompt("lucky")
   var y = prompt("干巴爹")
-  if (x < 10 || y < 20){
-    console.log("0")
-  } else {
+  if (x > 10 || y > 20){
     console.log("1")
+  } else {
+    console.log("0")
   }
 </script>
 <script id="ch0104/08">
@@ -224,10 +224,10 @@
 <script id="ch0104/10">
   var x = Number(prompt("x"))
   var y = Number(prompt("y"))
-  if (x < 60 || y < 60){
-    console.log(0)
-  } else{
+  if (x >= 60 || y >= 60){
     console.log(1)
+  } else{
+    console.log(0)
   }
 </script>
 <script id="ch0104/11">
@@ -297,7 +297,7 @@
   var year = Number(prompt("year"))
   if (year % 3200 == 0){
     console.log("N")
-  } else if (year % 4 == 0 && (year % 400 == 0 || year % 100 == 1) || ((year % 3200) !== 0)) {
+  } else if (year % 4 == 0 && (year % 400 == 0 || year % 100 == 1)) {
     console.log("Y")
   } else{
     console.log("N")
