--- a/miao/noi.html
+++ b/miao/noi.html
@@ -261,16 +261,16 @@
 <script id="ch0104/14">
   var k = Number(prompt("k")) , q = prompt("y or n ?")
   if (q = y){
-    var m = Number(5)
+    var q = Number(5)
   } else {
-    var m = Number(0)
+    var q = Number(0)
   }
   if (k <= 1000){
-    console.log(Number(8) + Number(m))
+    console.log(Number(8) + Number(q))
   } else if((k - 1000) <= 500){
-    console.log(8 + 4 + m)
+    console.log(8 + 4 + q)
   } else {
-    console.log(8 + Math.ceil(((k - 1000)) / 500)*4 + m)
+    console.log(8 + Math.ceil(((k - 1000)) / 500)*4 + q)
   }
 </script>
 <script id="ch0104/15">
