--- a/miao/noi.html
+++ b/miao/noi.html
@@ -260,7 +260,7 @@
 </script>
 <script id="ch0104/14">
   var k = Number(prompt("k")) , q = prompt("y or n ?")
-  if (q = y){
+  if (q = 'y'){
     var q = Number(5)
   } else {
     var q = Number(0)
@@ -352,4 +352,8 @@
   var x = Number(prompt("x"))
   var y = Number(prompt("y"))
   console.log(n - Math.ceil(y/x))
+</script>
+<script id="ch0105/01">
+</script>
+<script id="ch0105/02">
 </script>
