--- a/miao/noi.html
+++ b/miao/noi.html
@@ -354,6 +354,29 @@
   console.log(n - Math.ceil(y/x))
 </script>
 <script id="ch0105/01">
+  var n = +prompt("人数")
+  var x = n
+  var sum = 0
+  while (n--){
+    var i = +prompt("age")
+    sum = sum + i
+  }
+  var arr = sum / x
+  console.log(Number(arr).toFixed(2))
 </script>
 <script id="ch0105/02">
+  var n = 12
+  var sum = 0
+  while (n--){
+    var i = +prompt("m")
+    sum = sum + i
+  }
+  var arr = sum / 12
+  console.log("$" + Number(arr).toFixed(2))
+</script>
+<script id="ch0105/03" type="xxx">
+  var r = +prompt("ml")
+  for (var n = r ; n = 0; n = n - 1){
+    
+  }
 </script>
