--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,3 +1,21 @@
+
+<script id="7">
+
+for (i = 0 ; i < 3 ; i++){
+  var a = +prompt('a')
+  if((a%7==0) || (a%10 == 7)){
+    console.log("YES")
+  }else{
+  console.log("NO")
+  }
+}
+</script>
+
+
+
+
+
+
 <script id="ch0103/01">
   var a = +prompt("Please input A:");
   var b = +prompt("Please input B:");
@@ -283,6 +301,22 @@
     console.log(z)
   }
 </script>
+<script id="ch00104/15">
+var max = -Infinity 
+var a = +prompt("")
+if (a > max) {
+  max = a
+}
+var a = +prompt("")
+if (a > max) {
+  max = a
+}
+var a = +prompt("")
+if (a > max) {
+  max = a
+}
+
+</script>
 <script id="ch0104/16">
   var a = Number(prompt("a"))
   var b = Number(prompt("b"))
@@ -358,11 +392,22 @@
   var x = n
   var sum = 0
   while (n--){
-    var i = +prompt("age")
+    var i = +prompt("年龄")
     sum = sum + i
   }
-  var arr = sum / x
-  console.log(Number(arr).toFixed(2))
+  var m = sum / x
+  console.log(Number(m).toFixed(2))
+</script>
+  <script id="ch0105/001">
+  var n = +prompt("人数")
+  var sum = 0
+  for (var a = n; a < 0; a--){
+    var i = +prompt("年龄")
+    sum = sum + i
+  }
+  var x = sum / n 
+  console.log(Number(x).toFixed(2))
+  
 </script>
 <script id="ch0105/02">
   var n = 12
@@ -374,9 +419,371 @@
   var arr = sum / 12
   console.log("$" + Number(arr).toFixed(2))
 </script>
-<script id="ch0105/03" type="xxx">
-  var r = +prompt("ml")
-  for (var n = r ; n = 0; n = n - 1){
-    
+<script id="ch0105/03">
+  var n = +prompt("ml")
+  var x = n
+  var sum = 0
+  while (n--){
+    var i = +prompt("No" + Number(1+sum) + ". sample")
+    sum = sum + i
   }
+  var arr = sum / x
+  console.log(Number(arr).toFixed(4))
+</script>
+<script id="ch0105/04">
+  var n = +prompt("n")
+  var x = n
+  var sum = 0
+  while (n--){
+    var i = +prompt("number")
+    sum = sum + i
+  }
+  var average = sum / x
+  console.log(sum + " " + Number(average).toFixed(5))
+</script>
+<script id="ch0105/05">
+  var n = +prompt("人数")
+  var a = []
+  for (var i = 0; i < n ; i++){
+    a[i] = +prompt("grade")
+  }
+  console.log(Math.max.apply(0,a))
+  /*直接用max会出NaN apply(arr1,arr2) 只遍历一个数组的话 arr1 = 0*/
+</script>
+<script id="ch0105/06">
+  var n = +prompt("total")
+  var a = []
+  for (var i = 0; i < n ; i++){
+    a[i] = +prompt("number")
+  }
+  var max = Math.max.apply(0,a)
+  var min = Math.min.apply(0,a)
+  console.log(Number(max) - Number(min))
+</script>
+<script id="ch0105/07">
+  var n = +prompt("day")
+  var a = []
+  for (var i = 0 ; i < n * 3 ; i++){
+    a[i] = +prompt("Medal")
+  }
+  var gold = (a[0] + a[3] + a[6])
+  var silr = (a[1] + a[4] + a[7])
+  var cu = (a[2] + a[5] + a[8])
+  var b = Number(gold) + Number(silr) + Number(cu)
+  console.log(gold,silr,cu,b)
+</script>
+<script id="ch0105/08">
+  var n = +prompt("几边形")
+  var b = 0
+  for (var i = 0; i != n-1 ; i++){
+    var a = +prompt("jio度")
+    b = a + b 
+  }
+  var x = ( ((n - 2) * 180) - b)
+  console.log(x)
+</script>
+<script id="ch0105/09">
+  debugger
+  var m = +prompt("m")
+  var n = +prompt("n")
+  var a = 0
+  for (var i = m ; i <= n ; i++){
+    i % 2 != 0 ? a = a + i++ : null
+  }
+</script>
+<script id="ch0105/10">
+  var m = +prompt("m")
+  var n = +prompt("n")
+  var a = 0
+  for (var i = m ; i <= n ; i++){
+    i % 17 == 0 ? a = a + i++ : null
+  }
+</script>
+<script id="ch0105/11">
+  var n = +prompt("n")
+  var one = 0
+  var five = 0
+  var ten = 0
+  for (var i = 1 ; i<=n ; i++){
+    var a = prompt("a")
+    if (a == 1){
+      var one = ++one
+    }else if (a == 5){
+      var five = ++five
+    }else if (a == 10){
+      var ten = ++ten
+    }
+  }
+  console.log(one,five,ten)
+</script>
+<script id="ch0105/12">
+  var n = +prompt("n")
+  var m = +prompt("m")
+  var b = 0
+  for ( var i = 0 ; i < n;i++){
+    var a = +prompt("a")
+    if ( m == a ){
+       b++
+    }
+  }
+  console.log(b)
+</script>
+<script id="ch0105/13">
+  var a = +prompt("a") , b = +prompt("b")
+  var c = Math.pow(a,b)
+  console.log(c)
+</script>
+<script id="ch0105/14">
+  var a = +prompt("a") , n = +prompt("n")
+  for (var i = 0 ; i != n ; i++){
+    a = a * 1.001
+  }
+  console.log(a.toFixed(4))
+</script>
+<script id="ch0105/15">
+  var r = +prompt("r") , m = +prompt("m") , y = +prompt("y")
+  for (var i = 0 ; i != y ; i++){
+    m = m * (r * 0.01 + 1)
+  }
+  console.log(Math.floor(m))
+</script>
+<script id="ch0105/16">
+  var n = +prompt("n") , k = +prompt("k")
+  var f = 200
+  var x = n
+  for (m = 1 ; m < 20 ; m++){
+    f = (f*(k / 100 + 1))
+    x += n
+    if(x >= f){
+      console.log(m+1)
+      break
+    }
+    if (m == 20){
+      console.log("Impossible!")
+    }
+  }
+</script>
+<script id="ch0105/17">
+  var a = +prompt("a")
+  var b = [1,1]
+  for (var i = 2 ; i < a ; i++){
+    b[i] = b[i-1] + b[i-2] 
+    var c = b[i] 
+  }
+  console.log(c)
+</script>
+<script id="ch0105/18">
+  var a = +prompt("a")
+  var x = +prompt("x") , y = +prompt("y")
+  var j = Number((y/x))
+  for (var i = 1 ; i < a ; i++){
+    var z = +prompt("z") , c = +prompt("c")
+    if(j - (c/z) > 0.05){
+      console.log("worse")
+    }else if ((c/z) - j > 0.05){
+      console.log("better")
+    }else{
+      console.log("same")
+    }
+  }
+</script>
+<script id="ch0105/19">
+var a = +prompt("a")
+var x = +prompt("x") , y = +prompt("y")
+var b = (Math.sqrt((x * x) + (y * y)))
+var p = +prompt("p")
+var q = ((b/50) + p)
+var h = ((b/50) + p/2)
+console.log(Math.ceil(q + h))
+</script>
+<script id="ch0105/20">
+  var n = +prompt("n")
+  var a = (n * 2)
+  for (var i = 0 ; i < 10 ; i++){
+    n = (n/2)
+    if (i < 8){
+      a += n
+    }
+  }
+  console.log(a.toFixed(4))
+  console.log(n.toFixed(7))
+</script>
+<script id="ch0105/21">
+  var a =+prompt("a")
+    if (a%2 != 0){
+      a = a * 3 + 1
+    }
+    if (a % 2 != 1){
+      for (var b = 0 ; a > 1  ; b++){
+        a = a/2
+      }
+    }
+    console.log(a)
+</script>
+<script id="ch0105/22">
+  var a = 0/*现金*/
+  var b = 0/*存款*/
+  sum = 0 /*总和 最后*1.2*/
+  for (i = 0 ; i <= 12 ; i++){
+    var n = +prompt("how")
+    a = 300 - n + a
+    if(a >= 100){
+      a = (a - b*100)
+      b = b + (a / 100)
+      b = (b % 100)
+    }
+    if(a < 0){
+      console.log("-" + i)
+      break
+    }
+    if (i == 12){
+      sum  = (b * 1.2)
+    }
+  }
+  console.log(sum)
+</script>
+<script id="ch0105/23">
+  var b = 0
+  var m = +prompt("m")
+  var n = +prompt("n")
+  for (var i = 0 ; i < n ; i++){
+    var a = +prompt("a")
+    if (m < a){
+      b = b + 1
+      continue
+    }
+    if (m > a){
+      m = m - a
+    }
+  }
+  console.log(b)
+</script>
+<script id="ch0105/24">
+  var a = +prompt("a")
+  var x = Number(90)
+  var y = Number(140)
+  var z = Number(60)
+  var c = 0
+  for (i = 0 ; i < a ; i++){
+    var y1 = +prompt("y1") , y2 = +prompt("y2")
+    if ((x <= y1 && y1 <= y) && (z <= y2 && y2 <= x)){
+      c = c + 1
+    }else{
+      c = 0
+    }
+  }
+  console.log(c)
+</script>
+<script id="ch0105/25">
+  for (var n = 49 ; n <= 9 * 9 * 9 -1; n++) {
+    var a1 = n % 7
+    var a2 = (n - a1) / 7 % 7
+    var a3 = ((n - a1) / 7  - a2) / 7 % 7
+
+    var b1 = n % 9
+    var b2 = (n - b1) / 9 % 9
+    var b3 = ((n - b1) / 9  - b2) / 9 % 9
+    if ( a1 == b3 && a2 == b2 && a3 == b1){
+      console.log(n, + '' + a3 + a2 + a1, '' + b3 + b2 + b1)
+    }
+  }
+</script>
+//单独求出4位数的个十百千
+<script id="ch0105/26">
+  var a = +prompt("a")
+  var c = 0
+  for (i = 0 ; i < a ; i++){
+    var b = +prompt("b")
+    var q = (parseInt(b/1000))
+    var j = parseInt((parseInt(b%1000)/100))
+    var s = parseInt((parseInt(b%100)/10))
+    var g = (parseInt(b%10))
+    if ((g - (q + j + s )> 0)) {
+      c = c + 1
+    }else{
+      continue
+    }
+  }
+  console.log(c)
+</script>
+<script id="ch0105/27">
+  var a = +prompt("a")
+  var b = 0
+  for (var i = 1 ; i < 5 ; i++){
+    b = b + 1/i
+    if ( b > a ){
+      console.log(i)
+      break
+    }
+  }
+</script>
+<script id="ch0105/28">
+  var a = prompt("a")
+  var b = 1
+  var d = ''
+  for (i = 0 ; i < a.length ; i++){
+    var c = parseInt((a%(b*10)) / b)
+    d += c + " "
+    if (a/(b*10) == 0){
+      break
+    }else{
+      b = b*10
+    }
+  }
+  console.log(d)
+</script>
+<script id="ch0105/29">
+  var n = +prompt()
+  var sum = 0
+
+  while (n != 0) {
+    var digit = n % 10
+    sum = sum * 10 + digit
+    n = (n - digit) / 10
+}
+
+console.log(sum)
+
+</script>
+<script id="ch0105/30">
+  var a = +prompt("a") , b = +prompt("b")
+  for (i = 0 ; i < 5 ; i++){
+    if (a % 19 == 0){
+      console.log('YES')
+      break
+    }else{
+      console.log('No')
+    }
+  }
+</script>
+<script id="ch0105/31">
+  var n = +prompt()
+  var m = +prompt()
+  for (var light = 1 ; light <= n ; light++){
+    //灯
+    var On = true 
+    for (var p = 1 ; p <= m ; p++){
+      if (light % p == 0){
+        if (On){
+          On = false
+        }else{
+          On =true
+        }
+      }
+    }
+    if (!On){
+      console.log(light)
+    }
+  }
+</script>
+<script id="ch0105/37">
+  var a = +prompt("a")
+  var b = +prompt("b")
+  var c = +prompt("c")
+  c = c - Math.ceil(a / b)
+  for ( c ; c > 0 ; c ){
+    c = c - Math.ceil(a / b)
+    b = b + parseInt(a / b)
+  }
+  console.log(b)
 </script>
