chenggonglagit add *git add *! womenshibaqiang

--- a/miao/作业/1.html
+++ b/miao/作业/1.html
@@ -10,13 +10,20 @@
   }
 </script>
 <script type="">
-  var a = 883
-  var b = 255
+  var a = +prompt("")
+  var b = +prompt("")
   a = a + b
   b = a - b
   a = a - b
   //TODO
   console.log(a,b)
+
+
+  //or 
+  a = a^b
+  b = a^b
+  a = a^b
+
 </script>
 <script type="">
 var n = +prompt("")
@@ -25,4 +32,9 @@ for ( i = 0 ; n < 500; i++) {
     var a2 = (n - a1) / 5 % 5
     var a3 = ((n - a1) / 5  - a2) / 5 % 5
 }
+</script>
+
+<script type="">
+//遍历 7 9 进制
+
 </script>
