--- a/miao/noi.html
+++ b/miao/noi.html
@@ -483,13 +483,13 @@ if (a > max) {
   console.log(x)
 </script>
 <script id="ch0105/09">
-  debugger
   var m = +prompt("m")
   var n = +prompt("n")
   var a = 0
   for (var i = m ; i <= n ; i++){
     i % 2 != 0 ? a = a + i++ : null
   }
+  console.log(a)
 </script>
 <script id="ch0105/10">
   var m = +prompt("m")
@@ -498,6 +498,7 @@ if (a > max) {
   for (var i = m ; i <= n ; i++){
     i % 17 == 0 ? a = a + i++ : null
   }
+  console.log(a)
 </script>
 <script id="ch0105/11">
   var n = +prompt("n")
@@ -610,38 +611,42 @@ console.log(Math.ceil(q + h))
 </script>
 <script id="ch0105/21">
   var a =+prompt("a")
+  var b = a 
     if (a%2 != 0){
       a = a * 3 + 1
+      console.log(b +'*3+1=' + a)
     }
     if (a % 2 != 1){
       for (var b = 0 ; a > 1  ; b++){
         a = a/2
+        console.log(2 * a + '/2' + '=' + a)
       }
     }
-    console.log(a)
+    console.log('End')
 </script>
 <script id="ch0105/22">
   var a = 0/*现金*/
   var b = 0/*存款*/
-  sum = 0 /*总和 最后*1.2*/
-  for (i = 0 ; i <= 12 ; i++){
+  var c = 0/*月数*/
+  for (i = 0 ; i < 12 ; i++) {
     var n = +prompt("how")
     a = 300 - n + a
-    if(a >= 100){
-      a = (a - b*100)
-      b = b + (a / 100)
-      b = (b % 100)
+    if (a < 0){ /*如果现金为负数的话 计划失败 现金清零*/
+      a = 0
+      if (c == 0){
+        c = i + 1
+      }
     }
-    if(a < 0){
-      console.log("-" + i)
-      break
-    }
-    if (i == 12){
-      sum  = (b * 1.2)
-    }
+    a = a + Math.floor(a / 100) * 100
+    a = a % 100
   }
-  console.log(sum)
-</script>
+    if (c != 0){
+      console.log('-' + c)
+    }else{
+      a = a + b * 1.2;
+      console.log(a) 
+    }
+    </script>
 <script id="ch0105/23">
   var b = 0
   var m = +prompt("m")
@@ -767,7 +772,7 @@ console.log(sum)
         if (On){
           On = false
         }else{
-          On =true
+          On = true
         }
       }
     }
@@ -775,6 +780,59 @@ console.log(sum)
       console.log(light)
     }
   }
+</script>
+<script id="ch0105/32">
+  var a = +prompt("a")
+  var p = 1
+  var q = 2
+  var sum = 0
+  for (i = 0 ; i < a ; i++){
+    sum += q / p 
+    q = q + p
+    p = p + p
+  }
+  console.log(sum.toFixed(4))
+</script>
+<script id="ch0105/33">
+  var a = +prompt("")
+  var sum = 0
+  for (i = 1 ; i <= a ; i++){
+    sum += (Math.pow(-1,i-1)) * 1/i
+  }
+  console.log(sum.toFixed(4))
+</script>
+<script id="ch0105/34">
+  var a = +prompt("a")
+  var sum = 0
+  for (i = 1 ; i <= a ; i++){
+    var c = 1
+    for (j = 1 ; j <= i ; j++){
+      c = c * j
+    }
+    sum += c 
+  }
+</script>
+<script id="ch0105/35">
+  var a = +prompt("a")
+  var a = +prompt("a")
+  var sum = 0
+  for (i = 1 ; i <= a ; i++){
+    var c = i
+    for (j = 1 ; j <= i ; j++){
+      c = c * 1/j
+    }
+    sum += c 
+  }
+  console.log(c.toFixed(10))
+</script>
+<script id="ch0105/36">
+  var a = +prompt("a")
+  var b = +prompt("b")
+  var c = 0
+  for ( i = 0 ; i <= b ; i++){
+    c = (Math.pow(a,i)) + c
+  }
+  console.log(c.toFixed(2))
 </script>
 <script id="ch0105/37">
   var a = +prompt("a")
@@ -786,4 +844,137 @@ console.log(sum)
     b = b + parseInt(a / b)
   }
   console.log(b)
+</script>
+<script id="ch0105/38">
+  var a = +prompt("a")
+  var z = 0
+  for (i = 1 ; i <= a; i++){
+    var b = +prompt("b")
+    if (b == 0){
+      var c = +prompt("c")
+      console.log(b)
+    }else{
+    for (j = 0 ; j < b+1 ; j++){
+      var c = +prompt("c")
+      z = (c) * (b-j)
+    if (z < 0){
+      break
+      }else{
+        console.log(z)
+      }
+    }
+  }
+}
+</script>
+<script id="ch0105/39">
+  var a = +prompt("a")
+  var b = 0
+  for (i = 1 ; i <= a ; i++){
+    if (i % 7 != 0) {
+      var n = i
+      while(n > 0){
+        var digit = n % 10
+        if (digit == 7){
+          break
+        }
+        n = (n - digit) /10
+      }
+      if (n == 0 ){
+        b += i * i
+      }
+    }
+  }
+</script>
+<script id="ch0105/40">
+  var a = +prompt("")//12
+  var b = 0
+  for (i = 1 ; i <= a ; i++){
+    var n = i
+    while(n > 0){
+      var digit = n % 10
+      if(digit == 1){
+        b++
+      }
+      n = (n - digit) / 10 
+    }
+  }
+  console.log(b)
+</script>
+<script id="ch0105/41">
+  var a = +prompt("")
+  var b = +prompt("")
+  var sum = 0
+  for (i = a ; i <= b ; i++){
+    var n = i
+    while(n > 0) {
+      var digit = n % 10
+      if(digit == 2){
+        sum++
+      }
+      n = parseInt((n - digit)/10)
+    }
+  }
+  console.log(sum)
+</script>
+<script id="ch0105/42">
+var a = 7//+prompt("a")
+  var b = 7//+prompt("b")
+  var c = '@'//prompt("@")
+  var d = 0//prompt("0")
+  var e = ''
+  var f = ''
+  if (d == 1){
+  for (i = 1 ; i <= 7 ; i++){
+    e = ""
+    for (j = 7 ; j > 0; j--){
+      e+=c
+   }
+   e+="\n"
+   f+=e
+  }
+  console.log(f)
+}else{
+  debugger
+  for (i = 1 ; i <= 7 ; i++){
+    if (i%6==1){
+      e = c
+    }else{
+      e = " "
+    }
+    for (j = 7 ; j > 0; j--){
+      e+=c
+      if (i%6!=1){
+        e = c
+      }
+   }
+   e+="\n"
+   f+=e
+  }
+  console.log(f)
+}
+</script>
+<script id="ch0105/43">
+  var b = 0
+  var a = +prompt("a")
+  for (i = 2 ; i < a ; i++){
+    if (a%i==0){
+      var b = i
+    }
+  }console.log(b)
+</script>
+<script id="ch0105/44">
+  
+</script>
+<script id="ch0105/45">
+  var a = +prompt("a")
+  var sum = 0
+  for (i = 1; i <= a; i++){
+    if (i == 1){
+    sum ++
+  } else if (i == 2 || i ==3){
+    sum += 2
+  } else if (i > 3 && i <= 6){
+    sum += 3
+  }
+}
 </script>
