--- a/miao/paint.html
+++ b/miao/paint.html
@@ -97,12 +97,13 @@
     } 
   }
   //rgb色彩空间
-  var a = ""
-  /*for (var i = 200 ; i < 400 ; i++){
-    for (var j = 200 ; j < 400 ; j++){
-      dot(i,j,'rgba(255,255,255,)')
+  for (var i = 0 ; i <= 255 ; i++){
+    for (var j = 0 ; j <= 255 ; j++){
+      //dot(.2*i+200,.2*j+150,"rgb(0," + i + "," + j + ")")
+      dot(.2*i+200,.2*j+150,"rgb(" + i + ',' + j +',' + 255 + ")")
+      //rgb(i + "255" + j)
     }
-  }*/
+  }
   //空心圆
   for (var i = 0 ; i < 360 ; i++){
     dot((50*Math.cos(i*Math.PI/180))+180,(50*Math.sin(i*Math.PI/180))+180,'black')
