--- a/miao/noi.html
+++ b/miao/noi.html
@@ -1,18 +1,72 @@
 
-<script id="7">
 
-for (i = 0 ; i < 3 ; i++){
-  var a = +prompt('a')
-  if((a%7==0) || (a%10 == 7)){
-    console.log("YES")
-  }else{
+
+
+palindrom: 输入一个数，判断其是否为一个一个回文数"YES"/"NO"
+weekday: 输入年份与月份，输出这此年此月的第一天为星期几（0对应周日，1对应周一）
+complete-number: 输入一个数判断其是否为完数，输出"YES"/"NO"
+complete-numbers: 输出1000以内的完数
+
+itob: 输入一个数，输出其字符串形式
+lcf&lcm: 输入两个数，分别输出它们的最大公约数和最小公倍数
+sqrt: 输入一个数，输出其平方根，精确到小数点后3位
+
+// 7: 输入一个数，输出其是否是7的倍数或各个位上是否有7（25：NO，27：YES，21：YES)
+<script id="7">
+var a = +prompt("a")
+if (n % 7 == 0){
+  console.log("YES")
+}else{
+  while(n > 0) {
+    var digit = n % 10
+    if (digit == 7) {
+      console.log("YES")
+    }
+    n = (n - digit) / 10
+  }
   console.log("NO")
+}
+</script>
+//sort: 输入3个数，按从小到大顺序输出
+<script id="sort">
+  var a = +prompt("a") , b = +prompt("b") , c = +prompt("c")
+  var max = (a > b ? a : b) > c ? (a > b ? a : b) : c
+  var min = (a < b ? a : b) < c ? (a < b ? a : b) : c
+  console.log(min , a + b + c- max - min , max)
+</script>
+narcissistic: 输入一个数判断其是否为水仙花数，输出"YES"/"NO"
+narcissistics: 输出1000以内的水仙花数
+<script id="narcissistic">
+
+</script>
+prime: 输入一个数判断其是否为素数数，输出"YES"/"NO"
+primes: 输出100以内的素数
+<script id="prime">
+var isPrime = function(n){
+  if (n < 2){
+    return false
+  }
+  var sqrt = Math.floor(Math.sqrt(n))
+  for (var i = 2 ; i <= sqrt ; i++){
+    if (n % i == 0){
+      return false
+    }
+  }
+  return true
+}
+if (isPrime(n)) {
+  console.log("YES")
+} else {
+  console.log('NO')
+}
+
+
+for (var i = 0 ; i < 100 ; i++){
+  if (isPrime(i)) {
+    console.log(i)
   }
 }
 </script>
-
-
-
 
 
 
@@ -811,6 +865,7 @@ console.log(sum)
     }
     sum += c 
   }
+  console.log(sum)
 </script>
 <script id="ch0105/35">
   var a = +prompt("a")
@@ -965,7 +1020,7 @@ var a = 7//+prompt("a")
 <script id="ch0105/44">
   
 </script>
-<script id="ch0105/45">
+<script id="ch0105/45" type="xxx">
   var a = +prompt("a")
   var sum = 0
   for (i = 1; i <= a; i++){
@@ -977,4 +1032,19 @@ var a = 7//+prompt("a")
     sum += 3
   }
 }
+console.log(sum)
 </script>
+<script id="ch0105/45">
+var n = +prompt("n")
+var give = 1
+var sum = 0
+for (var i = 0,j = 0 ; i <n ; j++,i++){
+  if (j == give){
+    j = 0
+    give++
+  }
+  sum += give 
+}
+console.log(sum)
+</script>
+/*逗号表达式 */
